# carytownnews_data

./: .gitignore  CLAUDE.md  README.md  datasette.yaml  pyproject.toml
data/budget/: sources.md
data/open-data-portal/: catalog.md
docs/superpowers/plans/: 2026-04-04-pipeline-a.md  2026-04-04-pipeline-b.md  2026-04-05-data-viewer.md
docs/superpowers/specs/: 2026-04-04-pipeline-a-design.md  2026-04-04-pipeline-b-design.md  2026-04-05-data-viewer-design.md
pipelines/pipeline_a/: extractor.py  normalizer.py  page_finder.py  page_map.py  run.py
pipelines/pipeline_b/: claude_extractor.py  normalizer.py  page_map.py  prompts.py  renderer.py  run.py
pipelines/shared/: db.py  schema.py
tests/pipeline_a/: test_db.py  test_extractor.py  test_integration.py  test_normalizer.py  test_page_finder.py  test_page_map.py
tests/pipeline_b/: test_claude_extractor.py  test_integration.py  test_normalizer.py  test_prompts.py  test_renderer.py
tests/pipeline_b/fixtures/: claude_budget_response.json  claude_quarterly_response.json
