[project]
name = "cary"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "pandas>=2.2",
    "anthropic>=0.40",
    "pymupdf>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "datasette>=0.65",
    "datasette-vega>=0.6",
]

[tool.setuptools.packages.find]
include = ["pipelines*"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]
testpaths = ["tests"]
